fix pill actions on mobile

--- a/src/ui/pill/atoms/content/content.module.scss
+++ b/src/ui/pill/atoms/content/content.module.scss
@@ -34,9 +34,5 @@
     align-items: center;
     justify-content: flex-end;
     padding: 0.75em 1em;
-
-    @include mobile {
-      justify-content: center;
-    }
   }
 }
